# SDLPlayground

./: CMakeLists.txt  CMakeLists.txt.in  README.md
application/: CMakeLists.txt  Sierpinski.cpp  Starfield.cpp  Voronoi.cpp
cmake/: FindSDL2.cmake
src/graphics/: CMakeLists.txt  Utils.h  Window.cpp  Window.h
